--- a/index.html
+++ b/index.html
@@ -6,13 +6,70 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- bootstrap -->
+    <!-- CSS only -->
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    
+
+
     <link rel="stylesheet" href="index.css">
+    <script src="index.js"></script>
+    <script type='text/javascript' src='util/jquery.min.js'></script>
 </head>
+
 <body>
     <header>
-        Bem vindo ao <br>
-        <img src="util/logo_final_vetorizada_branca.png">
+        <div class="container-fluid d-flex justify-content-center">
+            <div>
+                Bem vindo ao <br>
+                <div id="logo_header">
+                    <img src="util/logo_final_vetorizada_branca.png" class="img-fluid">
+                </div>
+            </div>
+
+        </div>
+
+
+
+        <div class="container-fluid d-flex justify-content-center">
+            <div id="youtube_video">
+                <div style="position: relative; height: 0; padding-bottom: 56.2%; padding-top: 0;">
+                    <iframe class="youtube-video"
+                        style="position: absolute !important; width: 100% !important; height: 100% !important; z-index: 100"
+                        src="https://www.youtube.com/embed/OSqiJbQCCvE?enablejsapi=1&version=3&playerapiid=ytplayer" modestbranding="0"  controls="0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="0"></iframe>
+                    <div
+                        style="position: absolute;top: 0;width: 100%;height: 70px;background-color: transparent;z-index: 101;left: 0;">
+                    </div>
+                    <div
+                        style="position: absolute;bottom: 0;width: 100%;height: 50px;background-color: transparent;z-index: 101;left: 0;">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="d-flex justify-content-center video-buttons">
+            <button type="button" class="btn btn-success me-2 play-video" id="play-video">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-play-fill" viewBox="0 0 16 16">
+                    <path
+                        d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
+                </svg> Play
+            </button>
+            <button type="button" class="btn btn-success pause-video">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-pause-fill" viewBox="0 0 16 16">
+                    <path
+                        d="M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5zm5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5z" />
+                </svg> Puase</button>
+        </div>
+
+        <script>
+            $('.play-video').click(function () {
+                $('.youtube-video')[0].contentWindow.postMessage('{"event":"command","func":"' + 'playVideo' + '","args":""}', '*');
+            });
+
+            $('.pause-video').click(function () {
+                $('.youtube-video')[0].contentWindow.postMessage('{"event":"command","func":"' + 'pauseVideo' + '","args":""}', '*');
+            });
+        </script>
     </header>
 </body>
