--- a/index.html
+++ b/index.html
@@ -17,6 +17,35 @@
 </head>
 
 <body>
+    <nav>
+
+        <div class="cronometro" id="dday"></div>
+
+        <script>
+
+            // Set the date we're counting down to 
+            var countDownDate = new Date("April 25, 2023 12:00:00").getTime();
+            // Update the count down every 1 second 
+            var x = setInterval(function () { // Get todays date and time 
+                var now = new Date().getTime();
+                // Find the distance between now an the count down date 
+                var distance = countDownDate - now;
+                // Time calculations for days, hours, minutes and seconds 
+                var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                if (hours < 10) hours = "0" + hours;
+                var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+                if (minutes < 10) minutes = "0" + minutes;
+                var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+                if (seconds < 10) seconds = "0" + seconds;
+                // Display the result in the element with id="demo" 
+                document.getElementById("dday").innerHTML = "<div><span>O valor promocional encerra automaticamente em:</span></div>" + hours + ":" + minutes + ":" + seconds;
+                // If the count down is finished, write some text 
+                if (distance < 0) { clearInterval(x); document.getElementById("dday").innerHTML = "00:00:00"; }
+            }, 1000);
+
+        </script>
+
+    </nav>
     <header>
         <div class="container-fluid d-flex justify-content-center">
             <div>
@@ -25,13 +54,10 @@
                     <img src="util/logo_final_vetorizada_branca.png" class="img-fluid">
                 </div>
             </div>
-
         </div>
 
-
-
         <div class="container-fluid d-flex justify-content-center">
-            <div id="youtube_video">
+            <div id="youtube-video">
                 <div style="position: relative; height: 0; padding-bottom: 56.2%; padding-top: 0;">
                     <iframe class="youtube-video"
                         style="position: absolute !important; width: 100% !important; height: 100% !important; z-index: 100"
@@ -61,7 +87,6 @@
                         d="M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5zm5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5z" />
                 </svg> Puase</button>
         </div>
-
         <script>
             $('.play-video').click(function () {
                 $('.youtube-video')[0].contentWindow.postMessage('{"event":"command","func":"' + 'playVideo' + '","args":""}', '*');
@@ -71,5 +96,20 @@
                 $('.youtube-video')[0].contentWindow.postMessage('{"event":"command","func":"' + 'pauseVideo' + '","args":""}', '*');
             });
         </script>
+
+        <div class="video-text d-flex justify-content-center">
+            <div class="col-10">
+                <span class="video-text-1">Assista ao vídeo para liberar o conteúdo da página</span><br>
+                <span class="video-text-2">Se você não puder dedicar 15 minutos à sua SAÚDE e MUDANÇA DE VIDA, eu não
+                    acredito nos seus resultados!</span>
+            </div>
+        </div>
+
+
     </header>
+
+    <div class="session">
+        teste
+    </div>
+
 </body>
