--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-
-
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <script type='text/javascript' src='util/jquery.min.js'></script>
 </head>
 
@@ -92,7 +91,7 @@
                     class="bi bi-pause-fill" viewBox="0 0 16 16">
                     <path
                         d="M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5zm5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5z" />
-                </svg> Puase</button>
+                </svg> Pause</button>
         </div>
         <script>
             $('.play-video').click(function () {
@@ -116,22 +115,104 @@
     </header>
 
     <div class="session">
-        <div class="container-fluid row">
-            <div class="col-lg-4 p-4">
-                <span class="text-1">Acesso imediato</span><br>
-                <span class="text-2">Seu login e senha serão enviados ao seu e-mail logo após o processamento do
-                    pagamento.</span>
+        <div class="container-fluid d-flex justify-content-center">
+            <div class="container row">
+                <div class="col-lg-12">
+                    <span class="title">
+                        Produto:
+                    </span>
+                </div>
+                <div class="col-lg-6 p-5">
+                    <span>
+                        <i class="bi bi-key icon-group-1"></i>
+                    </span><br>
+                    <span class="text-1">Acesso imediato</span><br>
+                    <span class="text-2">Seu login e senha serão enviados ao seu e-mail logo após o processamento do
+                        pagamento.</span>
+                </div>
+                <div class="col-lg-6 p-5">
+                    <span>
+                        <i class="bi bi-check2-circle icon-group-1"></i>
+                    </span><br>
+                    <span class="text-1">7 dias de garantia</span><br>
+                    <span class="text-2">Sua inscrição com risco zero. Você poderá pedir a devolução de 100% do seu
+                        dinheiro dentro de 7 dias. Sem burocracias.</span>
+                </div>
+                <div class="col-lg-6 p-5">
+                    <span>
+                        <i class="bi bi-shield-lock icon-group-1"></i>
+                    </span><br>
+                    <span class="text-1">Pagamento seguro</span><br>
+                    <span class="text-2">Seu pagamento está 100% seguro. Seus dados estão protegidos conosco.</span>
+                </div>
+                <div class="col-lg-6 p-5">
+                    <span>
+                        <i class="bi bi-info-circle icon-group-1"></i>
+                    </span><br>
+                    <span class="text-1">Suporte ativo</span><br>
+                    <span class="text-2">Nosso suporte está ativo e pronto para atendê-lo em caso de qualquer problema
+                        de
+                        acesso ao produto.</span>
+                </div>
             </div>
-            <div class="col-lg-4 p-4">
-                <span class="text-1">7 dias de garantia</span><br>
-                <span class="text-2">Sua inscrição com risco zero. Você poderá pedir a devolução de 100% do seu
-                    dinheiro dentro de 7 dias. Sem burocracias.</span>
-            </div>
-            <div class="col-lg-4 p-4">
-                <span class="text-1">Pagamento seguro</span><br>
-                <span class="text-2">Seu pagamento está 100% seguro. E seus dados estão protegidos conosco.</span>
-            </div>
+        </div>
+    </div>
 
+    <div class="session2">
+        <div class="container-fluid d-flex justify-content-center">
+            <div class="container row">
+                <div class="col-lg-12 p-2 mb-3">
+                    <span class="title">
+                        Depoimentos:
+                    </span>
+                </div>
+                <div class="col-lg-6 row mb-5">
+                    <div class="col-lg-7">
+                        <img src="util/antes-depois/4.jpg" class="img-fluid">
+                    </div>
+                    <div class="col-lg-5 texto-depoimento mt-2">
+                        <span class="text-1">Amanda Vidal</span><br>
+                        <span class="text-2">"Eu amei o programa, ele é realmente muito prático de seguir! E o Pedro me ajudou com tudo, eu perdi 11kg no primeiro mês!"</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 row mb-5">
+                    <div class="col-lg-7">
+                        <img src="util/antes-depois/2.jpg" class="img-fluid">
+                    </div>
+                    <div class="col-lg-5 texto-depoimento mt-2">
+                        <span class="text-1">Haianda Carvalho</span><br>
+                        <span class="text-2">"O livro é muito interessante, vai muito além das receitas. Eu aprendi muita coisa, agora sei como comer o que quero sem ganhar o peso de volta."</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 row mb-5">
+                    <div class="col-lg-7">
+                        <img src="util/antes-depois/3.jpg" class="img-fluid">
+                    </div>
+                    <div class="col-lg-5 texto-depoimento mt-2">
+                        <span class="text-1">Ana Clara Melo</span><br>
+                        <span class="text-2">"Sem palavras!! Eu estou usando até hoje e vou continuar. Perdi 18 quilos nos últimos meses, é inacreditável!"</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 row mb-5">
+                    <div class="col-lg-7">
+                        <img src="util/antes-depois/1.jpg" class="img-fluid">
+                    </div>
+                    <div class="col-lg-5 texto-depoimento mt-2">
+                        <span class="text-1">Raíssa Santos</span><br>
+                        <span class="text-2">"Eu nem acredito que funcionou, eu já tava desesperada... na primeira semana perdi quase 5 quilos, recomendo com toda certeza."</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 my-4">
+                    <div class="col-lg-12">
+                        <img src="util/prints/1.jpg" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-lg-6 my-4">
+                    <div class="col-lg-12">
+                        <img src="util/prints/2.jpg" class="img-fluid">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
