--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div style="position: relative; height: 0; padding-bottom: 56.2%; padding-top: 0;">
                     <iframe class="youtube-video"
                         style="position: absolute !important; width: 100% !important; height: 100% !important; z-index: 100"
-                        src="https://www.youtube.com/embed/OSqiJbQCCvE?enablejsapi=1&version=3&playerapiid=ytplayer&controls=0"
+                        src="https://www.youtube.com/embed/XmQjScoI0N4?enablejsapi=1&version=3&playerapiid=ytplayer&controls=0&cc_load_policy=1"
                         modestbranding="0" controls="0" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen="0"></iframe>
