--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <script src="index.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <script type='text/javascript' src='util/jquery.min.js'></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+        integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
+        integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -79,14 +85,14 @@
         </div>
 
         <div class="d-flex justify-content-center video-buttons">
-            <button type="button" class="btn btn-success me-2 play-video" id="play-video">
+            <button type="button" class="btn btn-sm btn-success me-2 play-video" id="play-video">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-play-fill" viewBox="0 0 16 16">
                     <path
                         d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
                 </svg> Play
             </button>
-            <button type="button" class="btn btn-success pause-video">
+            <button type="button" class="btn btn-sm btn-success pause-video">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-pause-fill" viewBox="0 0 16 16">
                     <path
@@ -117,10 +123,20 @@
     <div class="session">
         <div class="container-fluid d-flex justify-content-center">
             <div class="container row">
-                <div class="col-lg-12">
-                    <span class="title">
-                        Produto:
-                    </span>
+                <div class="container-fluid d-flex justify-content-center">
+                    <div class="col-lg-6" style="text-align: justify;">
+                        <div class="row" style="text-align: center">
+                            <span class="title">
+                                Produto:
+                            </span>
+                        </div>
+                        O <span class="fw-bold">DESAFIO DOS 19 DIAS</span> é diferente de tudo que você já viu! O que
+                        mais tem chamado atenção de minhas clientes, é a praticidade
+                        no preparo dos smoothies, o que torna a dieta extremamente fácil de seguir. Isso, aliado ao
+                        sabor dos smoothies, é o segredo que
+                        torna esse programa tão eficaz. Sua simplicidade resulta em muito mais consistência, e,
+                        consequentemente, muito mais sucesso!
+                    </div>
                 </div>
                 <div class="col-lg-6 p-5">
                     <span>
@@ -172,7 +188,8 @@
                     </div>
                     <div class="col-lg-5 texto-depoimento mt-2">
                         <span class="text-1">Amanda Vidal</span><br>
-                        <span class="text-2">"Eu amei o programa, ele é realmente muito prático de seguir! E o Pedro me ajudou com tudo, eu perdi 11kg no primeiro mês!"</span>
+                        <span class="text-2">"Eu amei o programa, ele é realmente muito prático de seguir! E o Pedro me
+                            ajudou com tudo, eu perdi 11kg no primeiro mês!"</span>
                     </div>
                 </div>
                 <div class="col-lg-6 row mb-5">
@@ -181,7 +198,8 @@
                     </div>
                     <div class="col-lg-5 texto-depoimento mt-2">
                         <span class="text-1">Haianda Carvalho</span><br>
-                        <span class="text-2">"O livro é muito interessante, vai muito além das receitas. Eu aprendi muita coisa, agora sei como comer o que quero sem ganhar o peso de volta."</span>
+                        <span class="text-2">"O livro é muito interessante, vai muito além das receitas. Eu aprendi
+                            muita coisa, agora sei como comer o que quero sem ganhar o peso de volta."</span>
                     </div>
                 </div>
                 <div class="col-lg-6 row mb-5">
@@ -190,7 +208,8 @@
                     </div>
                     <div class="col-lg-5 texto-depoimento mt-2">
                         <span class="text-1">Ana Clara Melo</span><br>
-                        <span class="text-2">"Sem palavras!! Eu estou usando até hoje e vou continuar. Perdi 18 quilos nos últimos meses, é inacreditável!"</span>
+                        <span class="text-2">"Sem palavras!! Eu estou usando até hoje e vou continuar. Perdi 18 quilos
+                            nos últimos meses, é inacreditável!"</span>
                     </div>
                 </div>
                 <div class="col-lg-6 row mb-5">
@@ -199,7 +218,8 @@
                     </div>
                     <div class="col-lg-5 texto-depoimento mt-2">
                         <span class="text-1">Raíssa Santos</span><br>
-                        <span class="text-2">"Eu nem acredito que funcionou, eu já tava desesperada... na primeira semana perdi quase 5 quilos, recomendo com toda certeza."</span>
+                        <span class="text-2">"Eu nem acredito que funcionou, eu já tava desesperada... na primeira
+                            semana perdi quase 5 quilos, recomendo com toda certeza."</span>
                     </div>
                 </div>
                 <div class="col-lg-6 my-4">
@@ -214,6 +234,148 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="session">
+        <div class="container-fluid d-flex justify-content-center">
+            <div class="container row">
+                <div class="col-lg-12">
+                    <span class="title">
+                        Material
+                    </span><br>
+                    <span class="text-2">
+                        O que exatamente eu vou levar?
+                    </span>
+                    <div class="row">
+                        <div class="col-lg-4 my-4">
+                            <img src="util/material/core.jpg" class="img-fluid">
+                            <br><br>
+
+
+                            <div class="accordion accordion-flush" id="accordionFlushExample">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="flush-headingOne">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
+                                            aria-expanded="false" aria-controls="flush-collapseOne">
+                                            Capítulo 1 - Nutrientes essenciais
+                                        </button>
+                                    </h2>
+                                    <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                        aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">
+                                            Nesse capítulo, você vai conhecer os macro e micronutrientes essenciais
+                                            para a saúde e bem estar do corpo humano, bem como suas funções e em quais
+                                            alimentos são encontrados.
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="flush-headingTwo">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo"
+                                            aria-expanded="false" aria-controls="flush-collapseTwo">
+                                            Capítulo 2 - Nutrição e emagrecimento
+                                        </button>
+                                    </h2>
+                                    <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                        aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">
+                                            O capítulo 2 irá falar sobre a nutrição focada naquilo que nos interessa: o
+                                            <span class="fw-bold">emagrecimento</span>.
+                                            Ele irá abordar estratégias nutricionais de uma forma simples para que você
+                                            entenda a ciência
+                                            por trás da perda de peso. O lado bom de você entender essas estratégias, é
+                                            que você passa a ter
+                                            domínio da sua alimentação. Uma vez que entenda o que será explicado nesse
+                                            capítulo, será capaz de
+                                            tomar decisões próprias com relação a dieta sem abrir mão de seus objetivos
+                                            e sua saúde.
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="flush-headingThree">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#flush-collapseThree"
+                                            aria-expanded="false" aria-controls="flush-collapseThree">
+                                            Capítulo 3 - Smoothies
+                                        </button>
+                                    </h2>
+                                    <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">
+                                            Aqui você vai encontrar TUDO sobre os smoothies. Definição, curiosidades,
+                                            dicas sobre o preparo, informações e alguns conselhos.
+                                            Tenho certeza de que você também vai se apaixonar pelas vantagens de incluir
+                                            essas delícias na sua alimentação!
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="flush-headingFour">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#flush-collapseFour"
+                                            aria-expanded="false" aria-controls="flush-collapseFour">
+                                            Capítulo 4 - Desafio dos 19 dias
+                                        </button>
+                                    </h2>
+                                    <div id="flush-collapseFour" class="accordion-collapse collapse"
+                                        aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                                        <div class="accordion-body">
+                                            O quarto e último capítulo é inteiramente dedicado ao programa de 19 dias.
+                                            Ele vai explicar TUDO que recomendamos fazer durante essa etapa. Todos os
+                                            detalhes.
+                                            Ele contém um bônus de recomendações para almoço e lanches, além das mais de
+                                            30 deliciosas
+                                            receitas de smoothies. Se restar alguma dúvida, você pode consultar o bônus
+                                            GUIA PRÁTICO.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 my-4">
+                            <img src="util/material/detox.jpg" class="img-fluid">
+                        </div>
+                        <div class="col-lg-4 my-4">
+                            <img src="util/material/guia.jpg" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="container-fluid d-flex justify-content-center my-5">
+                        <img src="util/material/garantia.png" class="img-fluid" width="200px">
+                    </div>
+                    <div class="container-fluid d-flex justify-content-center">
+                        <div class="col-lg-6" style="text-align: justify;">
+                            Esse é um produto LIVRE DE RISCOS! Está protegido por uma garantia incondicional de 7
+                            dias. Incondicional. Isso significa que você
+                            não precisa dar satisfações ou explicações para conseguir o reembolso. Ao ser
+                            solicitado, ele será atendido. Simples assim. Sem burocracias.
+                            Você não tem nada a perder, literalmente RISCO ZERO.
+                        </div>
+                    </div>
+
+                    <div class="container-fluid d-flex justify-content-center my-5">
+                        <img src="util/material/smoothie.png" class="img-fluid" width="200px">
+                    </div>
+                    <div class="container-fluid d-flex justify-content-center">
+                        <div class="col-lg-6" style="text-align: justify;">
+                            As receitas smoothie contidas nesse programa não são quaisquer receitas.
+                            Elas foram cuidadosamente preparadas para substituir refeições contendo
+                            todos os nutrientes necessários para tal, além de conter uma quantidade
+                            de calorias meticulosamente dentro do planejamento para o seu emagrecimento
+                            RÁPIDO e, não menos importante, elas têm um sabor testado e comprovado por
+                            milhares de clientes!
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <br><br><br><br>
+        conteúdo: preços - pedro bernardes - faq - rodape<br>
+        operacional: liberar site após 15min, video autoplay 4seg, fontes funcionando somente PC
     </div>
 
 </body>
