--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     <header>
         <div class="container-fluid d-flex justify-content-center">
             <div>
-                Bem vindo ao <br>
+                <span class="video-text-2">Bem vindo ao</span> <br>
                 <div id="logo_header">
-                    <img src="util/logo_final_vetorizada_branca.png" class="img-fluid">
+                    <img src="util/logo_final_vetorizada.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -371,8 +371,9 @@
                                     <div id="flush-collapseD" class="accordion-collapse collapse"
                                         aria-labelledby="flush-headingD" data-bs-parent="#accordionFlushExample3">
                                         <div class="accordion-body">
-                                            Esse bônus especial é o preparo perfeito para o desafio. 
-                                            Ele vai estimular seu corpo e desenferrujar seu metabolismo, além de, por si só,
+                                            Esse bônus especial é o preparo perfeito para o desafio.
+                                            Ele vai estimular seu corpo e desenferrujar seu metabolismo, além de, por si
+                                            só,
                                             já proporcionar uma perda de peso inicial.
                                         </div>
                                     </div>
@@ -395,8 +396,10 @@
                                     <div id="flush-collapseG" class="accordion-collapse collapse"
                                         aria-labelledby="flush-headingG" data-bs-parent="#accordionFlushExample4">
                                         <div class="accordion-body">
-                                            O guia nutricional está recheado de dicas valiosas. Além da lista de compras separada por cada semana, 
-                                            para agilizar e facilitar sua vida, está equipado com informações importantes como alternativas para substituições, 
+                                            O guia nutricional está recheado de dicas valiosas. Além da lista de compras
+                                            separada por cada semana,
+                                            para agilizar e facilitar sua vida, está equipado com informações
+                                            importantes como alternativas para substituições,
                                             em caso de alergia ou de você não encontrar algum ingrediente na sua região.
                                         </div>
                                     </div>
@@ -431,12 +434,45 @@
                         </div>
                     </div>
 
+                    <br><br>
+                    <div class="container-fluid d-flex justify-content-center">
+                        <div class="row about py-5">
+                            <div class="col-lg-1">
+                            </div>
+                            <div class="col-lg-6" style="text-align: justify;">
+                                <img src="util/pedro/perfil.png" class="img-fluid" style="float: left; padding: 22px"/>
+                                <span class="title">Sobre mim</span><br>
+                                Meu nome é Pedro Bernardes, trabalho com consultoria profissional há mais de 08 anos. Há cerca de 03 anos, 
+                                desenvolvi um método para atender algumas clientes particulares. O resultado foi tão surpreendente que me deixou assustado!
+                                Elas contavam como esse método tão fácil estava ajudando em diversos aspectos de suas vidas, e que depois de tentar de tudo, isso era a única
+                                coisa que funcionou de verdade. Em pouco tempo, este programa começou a repercutir em grande escala no meu ciclo social, eram tantas
+                                pessoas me procurando, que eu não conseguia mais atender! Foi depois de todo esse feedback positivo que eu decidi que precisava encontrar
+                                uma forma de atender a TODAS aquelas pessoas. Isso tudo me trouxe até aqui, com a missão de transformar o máximo de vidas possível para melhor! Seja muito bem vinda!
+                            </div>
+                            <div class="col-lg-1">
+                            </div>
+                            <div class="col-lg-3 mt-5">
+                                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
+                                            <img src="util/pedro/pb1.jpg" class="d-block w-100" alt="...">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="util/pedro/pb2.jpg" class="d-block w-100" alt="...">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
 
         <div class="d-flex justify-content-center session">
             <div class="col-lg-6">
+                <span class="title">Valor promocional</span>
                 <table class="table table-light">
                     <thead>
                         <tr>
@@ -603,7 +639,9 @@
                                 te auxiliaremos com TODAS as
                                 suas dúvidas de natureza nutricional ou relacionadas ao seu desafio. Te atenderei
                                 individualmente via whatsapp
-                                durante 30 dias.
+                                durante 30 dias.<br><br>
+
+                                <span class="fw-bold">A MENTORIA É UM SERVIÇO DE ATENDIMENTO PESSOAL, E, PORTANTO, POSSUÍ VAGAS LIMITADAS!</span>
                             </div>
                         </div>
                     </div>
@@ -628,7 +666,6 @@
         </div>
 
         <br><br><br><br>
-        conteúdo: pedro bernardes<br>
         operacional: liberar site após 15min, video autoplay 4seg, fontes funcionando somente PC
     </div>
     <div class="footer d-flex justify-content-center py-5">
