--- a/index.html
+++ b/index.html
@@ -407,30 +407,33 @@
                             </div>
                         </div>
                     </div>
-                    <div class="container-fluid d-flex justify-content-center my-5">
-                        <img src="util/material/garantia.png" class="img-fluid" width="200px">
-                    </div>
                     <div class="container-fluid d-flex justify-content-center">
-                        <div class="col-lg-6" style="text-align: justify;">
-                            Esse é um produto LIVRE DE RISCOS! Está protegido por uma garantia incondicional de 7
-                            dias. Incondicional. Isso significa que você
-                            não precisa dar satisfações ou explicações para conseguir o reembolso. Ao ser
-                            solicitado, ele será atendido. Simples assim. Sem burocracias.
-                            Você não tem nada a perder, literalmente RISCO ZERO.
-                        </div>
-                    </div>
+                        <div class="row">
+                            <div class="col-lg-5" style="text-align: justify;">
+                                <div class="container-fluid d-flex justify-content-center my-5">
+                                    <img src="util/material/garantia.png" class="img-fluid" width="200px">
+                                </div>
+                                Esse é um produto LIVRE DE RISCOS! Está protegido por uma garantia incondicional de
+                                7
+                                dias. Incondicional. Isso significa que você
+                                não precisa dar satisfações ou explicações para conseguir o reembolso. Ao ser
+                                solicitado, ele será atendido. Simples assim. Sem burocracias.
+                                Você não tem nada a perder, literalmente RISCO ZERO.
+                            </div>
 
-                    <div class="container-fluid d-flex justify-content-center my-5">
-                        <img src="util/material/smoothie.png" class="img-fluid" width="200px">
-                    </div>
-                    <div class="container-fluid d-flex justify-content-center">
-                        <div class="col-lg-6" style="text-align: justify;">
-                            As receitas smoothie contidas nesse programa não são quaisquer receitas.
-                            Elas foram cuidadosamente preparadas para substituir refeições contendo
-                            todos os nutrientes necessários para tal, além de conter uma quantidade
-                            de calorias meticulosamente dentro do planejamento para o seu emagrecimento
-                            RÁPIDO e, não menos importante, elas têm um sabor testado e comprovado por
-                            milhares de clientes!
+                            <div class="col-lg-1">
+                            </div>
+                            <div class="col-lg-5" style="text-align: justify;">
+                                <div class="container-fluid d-flex justify-content-center my-5">
+                                    <img src="util/material/smoothie.png" class="img-fluid" width="200px">
+                                </div>
+                                As receitas smoothie contidas nesse programa não são quaisquer receitas.
+                                Elas foram cuidadosamente preparadas para substituir refeições contendo
+                                todos os nutrientes necessários para tal, além de conter uma quantidade
+                                de calorias meticulosamente dentro do planejamento para o seu emagrecimento
+                                RÁPIDO e, não menos importante, elas têm um sabor testado e comprovado por
+                                milhares de clientes!
+                            </div>
                         </div>
                     </div>
 
@@ -440,14 +443,24 @@
                             <div class="col-lg-1">
                             </div>
                             <div class="col-lg-6" style="text-align: justify;">
-                                <img src="util/pedro/perfil.png" class="img-fluid" style="float: left; padding: 22px"/>
+                                <img src="util/pedro/perfil.png" class="img-fluid" style="float: left; padding: 22px" />
                                 <span class="title">Sobre mim</span><br>
-                                Meu nome é Pedro Bernardes, trabalho com consultoria profissional há mais de 08 anos. Há cerca de 03 anos, 
-                                desenvolvi um método para atender algumas clientes particulares. O resultado foi tão surpreendente que me deixou assustado!
-                                Elas contavam como esse método tão fácil estava ajudando em diversos aspectos de suas vidas, e que depois de tentar de tudo, isso era a única
-                                coisa que funcionou de verdade. Em pouco tempo, este programa começou a repercutir em grande escala no meu ciclo social, eram tantas
-                                pessoas me procurando, que eu não conseguia mais atender! Foi depois de todo esse feedback positivo que eu decidi que precisava encontrar
-                                uma forma de atender a TODAS aquelas pessoas. Isso tudo me trouxe até aqui, com a missão de transformar o máximo de vidas possível para melhor! Seja muito bem vinda!
+                                Meu nome é Pedro Bernardes, trabalho com consultoria profissional há mais de 08
+                                anos. Há
+                                cerca de 03 anos,
+                                desenvolvi um método para atender algumas clientes particulares. O resultado foi tão
+                                surpreendente que me deixou assustado!
+                                Elas contavam como esse método tão fácil estava ajudando em diversos aspectos de
+                                suas
+                                vidas, e que depois de tentar de tudo, isso era a única
+                                coisa que funcionou de verdade. Em pouco tempo, este programa começou a repercutir
+                                em
+                                grande escala no meu ciclo social, eram tantas
+                                pessoas me procurando, que eu não conseguia mais atender! Foi depois de todo esse
+                                feedback positivo que eu decidi que precisava encontrar
+                                uma forma de atender a TODAS aquelas pessoas. Isso tudo me trouxe até aqui, com a
+                                missão
+                                de transformar o máximo de vidas possível para melhor! Seja muito bem vinda!
                             </div>
                             <div class="col-lg-1">
                             </div>
@@ -499,19 +512,22 @@
                         <tr>
                             <th scope="row">3</th>
                             <td>30+ receitas smoothie testadas e aprovadas</td>
-                            <td><span class="desconto">de R$49,00</span><span class="desconto2"> por R$10,00</span></td>
+                            <td><span class="desconto">de R$49,00</span><span class="desconto2"> por R$10,00</span>
+                            </td>
                             <td>80%</td>
                         </tr>
                         <tr>
                             <th scope="row">4</th>
                             <td>Detox 2D</td>
-                            <td><span class="desconto">de R$49,00 por</span><span class="desconto2"> GRÁTIS</span></td>
+                            <td><span class="desconto">de R$49,00 por</span><span class="desconto2"> GRÁTIS</span>
+                            </td>
                             <td>100%</td>
                         </tr>
                         <tr>
                             <th scope="row">5</th>
                             <td>Guia Prático</td>
-                            <td><span class="desconto">de R$49,00 por</span><span class="desconto2"> GRÁTIS</span></td>
+                            <td><span class="desconto">de R$49,00 por</span><span class="desconto2"> GRÁTIS</span>
+                            </td>
                             <td>100%</td>
                         </tr>
                         <tr>
@@ -568,7 +584,8 @@
                         <div id="flush-collapse2" class="accordion-collapse collapse" aria-labelledby="flush-heading2"
                             data-bs-parent="#accordionFlushExample2">
                             <div class="accordion-body">
-                                Você estará obtendo resultados a partir do momento em que iniciar a prática do desafio.
+                                Você estará obtendo resultados a partir do momento em que iniciar a prática do
+                                desafio.
                                 A expressividade desses resultados vai depender da sua execussão, principalmente com
                                 relação
                                 ao que é ensinado nos capítulos 2 e 4.
@@ -585,7 +602,8 @@
                         <div id="flush-collapse3" class="accordion-collapse collapse" aria-labelledby="flush-heading3"
                             data-bs-parent="#accordionFlushExample2">
                             <div class="accordion-body">
-                                Esse é um produto totalmente digital. Assim que passar pelo checkout, você recebe acesso
+                                Esse é um produto totalmente digital. Assim que passar pelo checkout, você recebe
+                                acesso
                                 total. O mesmo vale para os bônus.
                             </div>
                         </div>
@@ -601,7 +619,8 @@
                             data-bs-parent="#accordionFlushExample2">
                             <div class="accordion-body">
                                 O seu acesso é vitalício. Você sempre terá acesso usando suas credenciais.
-                                Inclusive ele contém todas as instruções caso decida por repetir o desafio no futuro.
+                                Inclusive ele contém todas as instruções caso decida por repetir o desafio no
+                                futuro.
                                 Mas atenção! Sua compra não inclui direito de revenda. É para uso pessoal.
                             </div>
                         </div>
@@ -633,15 +652,18 @@
                         <div id="flush-collapse6" class="accordion-collapse collapse" aria-labelledby="flush-heading6"
                             data-bs-parent="#accordionFlushExample2">
                             <div class="accordion-body">
-                                Nosso programa de mentoria se baseia no programa de 19 dias, por isso será oferecido no
+                                Nosso programa de mentoria se baseia no programa de 19 dias, por isso será oferecido
+                                no
                                 momento da compra do livro.
-                                Esse produto NÃO SE TRATA de um novo programa. É um atendimento EXCLUSIVO opcional onde
+                                Esse produto NÃO SE TRATA de um novo programa. É um atendimento EXCLUSIVO opcional
+                                onde
                                 te auxiliaremos com TODAS as
                                 suas dúvidas de natureza nutricional ou relacionadas ao seu desafio. Te atenderei
                                 individualmente via whatsapp
                                 durante 30 dias.<br><br>
 
-                                <span class="fw-bold">A MENTORIA É UM SERVIÇO DE ATENDIMENTO PESSOAL, E, PORTANTO, POSSUÍ VAGAS LIMITADAS!</span>
+                                <span class="fw-bold">A MENTORIA É UM SERVIÇO DE ATENDIMENTO PESSOAL, E, PORTANTO,
+                                    POSSUÍ VAGAS LIMITADAS!</span>
                             </div>
                         </div>
                     </div>
@@ -655,7 +677,8 @@
                         <div id="flush-collapse7" class="accordion-collapse collapse" aria-labelledby="flush-heading7"
                             data-bs-parent="#accordionFlushExample2">
                             <div class="accordion-body">
-                                Você pode efetuar o pagamento no cartão de crédito ou boleto bancário. No cartão você
+                                Você pode efetuar o pagamento no cartão de crédito ou boleto bancário. No cartão
+                                você
                                 recebe acesso instantâneo, já no boleto estará sujeito ao prazo de aprovação de até
                                 72hs.
                             </div>
