--- a/index.html
+++ b/index.html
@@ -242,14 +242,24 @@
                             semana perdi quase 5 quilos, recomendo com toda certeza."</span>
                     </div>
                 </div>
-                <div class="col-lg-6 my-4">
+                <div class="col-lg-3 my-4">
                     <div class="col-lg-12">
                         <img src="util/prints/1.jpg" class="img-fluid">
                     </div>
                 </div>
-                <div class="col-lg-6 my-4">
+                <div class="col-lg-3 my-4">
                     <div class="col-lg-12">
                         <img src="util/prints/2.jpg" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-lg-3 my-4">
+                    <div class="col-lg-12">
+                        <img src="util/prints/3.jpg" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-lg-3 my-4">
+                    <div class="col-lg-12">
+                        <img src="util/prints/4.jpg" class="img-fluid">
                     </div>
                 </div>
             </div>
