--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
     <link rel="stylesheet" href="index.css">
-    <script type="text/javascript" src="index.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <script type='text/javascript' src='util/jquery.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
@@ -19,6 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
         integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
         crossorigin="anonymous"></script>
+    <script type="text/javascript" src="index.js"></script>
 </head>
 
 <body>
@@ -40,7 +40,7 @@
                 <div style="position: relative; height: 0; padding-bottom: 56.2%; padding-top: 0;">
                     <iframe class="youtube-video"
                         style="position: absolute !important; width: 100% !important; height: 100% !important; z-index: 100"
-                        src="https://www.youtube.com/embed/XmQjScoI0N4?enablejsapi=1&version=3&playerapiid=ytplayer&controls=0&cc_load_policy=1"
+                        src="https://www.youtube.com/embed/XmQjScoI0N4?enablejsapi=1&version=3&playerapiid=ytplayer&controls=0&cc_load_policy=1&autoplay=1"
                         modestbranding="0" controls="0" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen="0"></iframe>
@@ -62,7 +62,7 @@
                         d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
                 </svg> Play
             </button>
-            <button type="button" class="btn btn-sm btn-success pause-video">
+            <button type="button" class="btn btn-sm btn-success pause-video" id="pause-video">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-pause-fill" viewBox="0 0 16 16">
                     <path
@@ -70,13 +70,7 @@
                 </svg> Pause</button>
         </div>
         <script>
-            $('.play-video').click(function () {
-                $('.youtube-video')[0].contentWindow.postMessage('{"event":"command","func":"' + 'playVideo' + '","args":""}', '*');
-            });
 
-            $('.pause-video').click(function () {
-                $('.youtube-video')[0].contentWindow.postMessage('{"event":"command","func":"' + 'pauseVideo' + '","args":""}', '*');
-            });
         </script>
 
         <div class="video-text d-flex justify-content-center">
@@ -90,7 +84,13 @@
 
     </header>
 
-    <div class="session hide">
+    <div class="session hide" style="padding-top: 10px !important">
+        
+        <a href="https://pay.kiwify.com.br/2LPdXHF" class="btn btn-lg btn-success comprar">
+             QUERO COMEÇAR AGORA <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+              </svg></a><br><br>
+
         <div class="container-fluid d-flex justify-content-center">
             <div class="container row">
                 <div class="container-fluid d-flex justify-content-center">
@@ -524,8 +524,8 @@
                         </tr>
                         <tr>
                             <th scope="row" colspan="2">TOTAL:</th>
-                            <td><span class="desconto">de R$795,00</span><span class="desconto2"> por
-                                    R$89,00<br></span>ou 12x de <span class="desconto2">R$8,25</span></td>
+                            <td><span class="desconto">de R$795,00</span><span class="desconto2 h4"> por
+                                    R$89,00<br></span>ou 12x de <span class="desconto2 h1">R$8,94</span></td>
                             <td>89%</td>
                         </tr>
                     </tbody>
@@ -667,6 +667,11 @@
                 </div>
             </div>
         </div>
+        <br><br>
+        <a href="https://pay.kiwify.com.br/2LPdXHF" class="btn btn-lg btn-success comprar">
+             QUERO COMEÇAR AGORA <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+              </svg></a>
     </div>
     <div class="footer d-flex justify-content-center py-5 hide">
         <div class="row" style="max-width: 100%">
@@ -695,12 +700,12 @@
                                 <path
                                     d="M9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.5L9.5 0zm0 1v2A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5z" />
                             </svg> Termos de uso</a><br>
-                        <a href="mailto:sac@desafio19dias.fitness">
+                        <a href="mailto:suportedesafio19d@gmail.com">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-envelope" viewBox="0 0 16 16">
                                 <path
                                     d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
-                            </svg> sac@desafio19dias.fitness
+                            </svg> suportedesafio19d@gmail.com
                         </a>
                     </div>
                     <div class="d-flex justify-content-center">
