--- a/index.html
+++ b/index.html
@@ -36,19 +36,21 @@
         </div>
 
         <div class="container-fluid d-flex justify-content-center">
-            <div id="youtube-video">
-                <div style="position: relative; height: 0; padding-bottom: 56.2%; padding-top: 0;">
-                    <iframe class="youtube-video"
-                        style="position: absolute !important; width: 100% !important; height: 100% !important; z-index: 100"
-                        src="https://www.youtube.com/embed/XmQjScoI0N4?enablejsapi=1&version=3&playerapiid=ytplayer&controls=0&cc_load_policy=1&autoplay=1"
-                        modestbranding="0" controls="0" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen="0"></iframe>
-                    <div
-                        style="position: absolute;top: 0;width: 100%;height: 70px;background-color: transparent;z-index: 101;left: 0;">
-                    </div>
-                    <div
-                        style="position: absolute;bottom: 0;width: 100%;height: 50px;background-color: transparent;z-index: 101;left: 0;">
+            <div id="youtube-video-handle-click" onclick="play();">
+                <div id="youtube-video">
+                    <div style="position: relative; height: 0; padding-bottom: 56.2%; padding-top: 0;">
+                        <iframe class="youtube-video"
+                            style="position: absolute !important; width: 100% !important; height: 100% !important; z-index: 100"
+                            src="https://www.youtube.com/embed/XmQjScoI0N4?enablejsapi=1&version=3&playerapiid=ytplayer&controls=0&cc_load_policy=1&autoplay=1"
+                            modestbranding="0" controls="0" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen="0"></iframe>
+                        <div
+                            style="position: absolute;top: 0;width: 100%;height: 70px;background-color: transparent;z-index: 101;left: 0;">
+                        </div>
+                        <div
+                            style="position: absolute;bottom: 0;width: 100%;height: 50px;background-color: transparent;z-index: 101;left: 0;">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -85,11 +87,13 @@
     </header>
 
     <div class="session hide" style="padding-top: 10px !important">
-        
+
         <a href="https://pay.kiwify.com.br/2LPdXHF" class="btn btn-lg btn-success comprar">
-             QUERO COMEÇAR AGORA <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
-                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
-              </svg></a><br><br>
+            QUERO COMEÇAR AGORA <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                <path
+                    d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+            </svg></a><br><br>
 
         <div class="container-fluid d-flex justify-content-center">
             <div class="container row">
@@ -669,9 +673,11 @@
         </div>
         <br><br>
         <a href="https://pay.kiwify.com.br/2LPdXHF" class="btn btn-lg btn-success comprar">
-             QUERO COMEÇAR AGORA <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
-                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
-              </svg></a>
+            QUERO COMEÇAR AGORA <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                <path
+                    d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+            </svg></a>
     </div>
     <div class="footer d-flex justify-content-center py-5 hide">
         <div class="row" style="max-width: 100%">
